--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
                         <article class="project-card">
                             <div class="image-container">
                                 <img class="project-image" src="./images/calculator.png" alt="Restaurant App Screenshot">
-                                <a href="https://github.com/SupriyoMaity1207/calculator" target="_blank" class="overlay-icon github-icon">
+                                <a href="https://github.com/supriyo-1207/calculator" target="_blank" class="overlay-icon github-icon">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://supriyomaity1207.github.io/calculator/" target="_blank" class="overlay-icon live-demo-icon">
+                                <a href="https://supriyo-1207.github.io/calculator/" target="_blank" class="overlay-icon live-demo-icon">
                                     <i class="fas fa-globe"></i>
                                 </a>
                             </div>
@@ -272,10 +272,10 @@
                         <article class="project-card">
                             <div class="image-container">
                                 <img class="project-image" src="./images/currency_convert.png" alt="Chatbot App Screenshot">
-                                <a href="https://github.com/SupriyoMaity1207/currency-converter" target="_blank" class="overlay-icon github-icon">
+                                <a href="https://github.com/supriyo-1207/currency-converter" target="_blank" class="overlay-icon github-icon">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://supriyomaity1207.github.io/currency-converter/" target="_blank" class="overlay-icon live-demo-icon">
+                                <a href="https://supriyo-1207.github.io/currency-converter/" target="_blank" class="overlay-icon live-demo-icon">
                                     <i class="fas fa-globe"></i>
                                 </a>
                             </div>
@@ -295,10 +295,10 @@
                         <article class="project-card">
                             <div class="image-container">
                                 <img class="project-image" src="./images/weather.png" alt="Chatbot App Screenshot">
-                                <a href="https://github.com/SupriyoMaity1207/weather-vue" target="_blank" class="overlay-icon github-icon">
+                                <a href="https://github.com/supriyo-1207/weather-vue" target="_blank" class="overlay-icon github-icon">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://supriyomaity1207.github.io/weather-vue/" target="_blank" class="overlay-icon live-demo-icon">
+                                <a href="https://supriyo-1207.github.io/weather-vue/" target="_blank" class="overlay-icon live-demo-icon">
                                     <i class="fas fa-globe"></i>
                                 </a>
                             </div>
