--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="social-icons">
                             <a href="https://www.linkedin.com/in/supriyomaity/" class="social-icon"><i
                                     class="fab fa-linkedin"></i></a>
-                            <a href="https://github.com/supriyo-1207" class="social-icon"><i
+                            <a href="https://github.com/SupriyoMaity1207" class="social-icon"><i
                                     class="fab fa-github"></i></a>
                             <a href="https://twitter.com/supriyo_1207" class="social-icon"><i
                                     class="fab fa-twitter"></i></a>
@@ -414,7 +414,7 @@
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/supriyomaity/" class="social-icon"><i
                                 class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/supriyo-1207" class="social-icon"><i
+                        <a href="https://github.com/SupriyoMaity1207" class="social-icon"><i
                                 class="fab fa-github"></i></a>
                         <a href="https://twitter.com/supriyo_1207" class="social-icon"><i
                                 class="fab fa-twitter"></i></a>
