--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
 
             <!-- Skills Filters -->
             <div class="text-center mb-4" data-aos="fade-up">
-                <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="frontend">Frontend</button>
-                <button class="filter-btn" data-filter="backend">Backend</button>
-                <button class="filter-btn" data-filter="database">Database</button>
-                <button class="filter-btn" data-filter="others">Others</button>
+                <button class="filter-btn skill-filter-btn active" data-filter="all">All</button>
+                <button class="filter-btn skill-filter-btn" data-filter="frontend">Frontend</button>
+                <button class="filter-btn skill-filter-btn" data-filter="backend">Backend</button>
+                <button class="filter-btn skill-filter-btn" data-filter="database">Database</button>
+                <button class="filter-btn skill-filter-btn" data-filter="others">Others</button>
             </div>
 
             <div class="row" id="skills-grid">
@@ -294,9 +294,9 @@
 
             <!-- Project Filters -->
             <div class="text-center mb-4" data-aos="fade-up">
-                <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="Static_Websites">Static Websites</button>
-                <button class="filter-btn" data-filter="AI-Powered Solutions">AI-Powered Solutions</button>
+                <button class="filter-btn project-filter-btn active" data-filter="all">All</button>
+                <button class="filter-btn project-filter-btn" data-filter="Static_Websites">Static Websites</button>
+                <button class="filter-btn project-filter-btn" data-filter="AI-Powered Solutions">AI-Powered Solutions</button>
 
             </div>
 
